syntax = "proto3";

package silenteight.datasource.api.ispep.v2;

import "google/api/annotations.proto";
import "google/protobuf/struct.proto";

option java_package = "com.silenteight.datasource.api.ispep.v2";
option java_outer_classname = "IsPepProto";
option java_multiple_files = true;

service IsPepInputService {
  rpc BatchGetMatchIsPepInputs (BatchGetMatchIsPepInputsRequest) returns (stream BatchGetMatchIsPepInputsResponse) {
    option (google.api.http) = {
      post: "/agent-inputs/ispep/versions/v2/matches:batchGet"
      body: "*"
    };
  }
}

message BatchGetMatchIsPepInputsRequest {
  repeated string matches = 1;
  repeated string features = 2;
}

message BatchGetMatchIsPepInputsResponse {
  repeated IsPepInput is_pep_inputs = 1;
}

message IsPepInput {
  string match = 1;
  WatchlistItem watchlist_item = 2;
}

message WatchlistItem {
  string feature = 1;
  string id = 2; // watchlist uid
  string type = 3; // e.g. WorldCheckIndividuals | WorldCheckEntities | PrivateListIndividuals | PrivateListEntities
  string country = 4; // e.g ap EdqLobCountries
  string further_information = 5;
  repeated string linked_peps_uids = 6;

}
